- Only set define entropy collection macros if they are found

--- a/configure.in
+++ b/configure.in
@@ -12,36 +12,6 @@ AC_CHECK_PROG(AR, ar, ar)
 AC_PATH_PROG(PERL, perl)
 AC_SUBST(PERL)
 
-# We may need these for entropy collection
-AC_PATH_PROG(PROG_LS, ls)
-AC_DEFINE_UNQUOTED(PROG_LS, "$PROG_LS")
-AC_PATH_PROG(PROG_NETSTAT, netstat)
-AC_DEFINE_UNQUOTED(PROG_NETSTAT, "$PROG_NETSTAT")
-AC_PATH_PROG(PROG_ARP, arp)
-AC_DEFINE_UNQUOTED(PROG_ARP, "$PROG_ARP")
-AC_PATH_PROG(PROG_IFCONFIG, ifconfig)
-AC_DEFINE_UNQUOTED(PROG_IFCONFIG, "$PROG_IFCONFIG")
-AC_PATH_PROG(PROG_PS, ps)
-AC_DEFINE_UNQUOTED(PROG_PS, "$PROG_PS")
-AC_PATH_PROG(PROG_W, w)
-AC_DEFINE_UNQUOTED(PROG_W, "$PROG_W")
-AC_PATH_PROG(PROG_WHO, who)
-AC_DEFINE_UNQUOTED(PROG_WHO, "$PROG_WHO")
-AC_PATH_PROG(PROG_LAST, last)
-AC_DEFINE_UNQUOTED(PROG_LAST, "$PROG_LAST")
-AC_PATH_PROG(PROG_LASTLOG, lastlog)
-AC_DEFINE_UNQUOTED(PROG_LASTLOG, "$PROG_LASTLOG")
-AC_PATH_PROG(PROG_DF, df)
-AC_DEFINE_UNQUOTED(PROG_DF, "$PROG_DF")
-AC_PATH_PROG(PROG_VMSTAT, vmstat)
-AC_DEFINE_UNQUOTED(PROG_VMSTAT, "$PROG_VMSTAT")
-AC_PATH_PROG(PROG_UPTIME, uptime)
-AC_DEFINE_UNQUOTED(PROG_UPTIME, "$PROG_UPTIME")
-AC_PATH_PROG(PROG_IPCS, ipcs)
-AC_DEFINE_UNQUOTED(PROG_UPTIME, "$PROG_UPTIME")
-AC_PATH_PROG(PROG_TAIL, tail)
-AC_DEFINE_UNQUOTED(PROG_TAIL, "$PROG_TAIL")
-
 if test -z "$LD" ; then
 	LD=$CC
 fi
@@ -661,6 +631,67 @@ AC_ARG_WITH(egd-pool,
 		fi
 	]
 )
+
+if test -z "$RANDOM_POOL" -a -z "$EGD_SOCKET" ; then
+	# Use these commands to collect entropy
+	AC_PATH_PROG(PROG_LS, ls)
+	AC_PATH_PROG(PROG_NETSTAT, netstat)
+	AC_PATH_PROG(PROG_ARP, arp)
+	AC_PATH_PROG(PROG_IFCONFIG, ifconfig)
+	AC_PATH_PROG(PROG_PS, ps)
+	AC_PATH_PROG(PROG_W, w)
+	AC_PATH_PROG(PROG_WHO, who)
+	AC_PATH_PROG(PROG_LAST, last)
+	AC_PATH_PROG(PROG_LASTLOG, lastlog)
+	AC_PATH_PROG(PROG_DF, df)
+	AC_PATH_PROG(PROG_VMSTAT, vmstat)
+	AC_PATH_PROG(PROG_UPTIME, uptime)
+	AC_PATH_PROG(PROG_IPCS, ipcs)
+	AC_PATH_PROG(PROG_TAIL, tail)
+	AC_PATH_PROG(PROG_LS, ls)
+	if test ! -z "$PROG_LS" ; then 
+		AC_DEFINE_UNQUOTED(PROG_LS, "$PROG_LS") 
+	fi
+	if test ! -z "$PROG_NETSTAT" ; then 
+		AC_DEFINE_UNQUOTED(PROG_NETSTAT, "$PROG_NETSTAT") 
+	fi
+	if test ! -z "$PROG_ARP" ; then 
+		AC_DEFINE_UNQUOTED(PROG_ARP, "$PROG_ARP") 
+	fi
+	if test ! -z "$PROG_IFCONFIG" ; then 
+		AC_DEFINE_UNQUOTED(PROG_IFCONFIG, "$PROG_IFCONFIG") 
+	fi
+	if test ! -z "$PROG_PS" ; then 
+		AC_DEFINE_UNQUOTED(PROG_PS, "$PROG_PS") 
+	fi
+	if test ! -z "$PROG_W" ; then 
+		AC_DEFINE_UNQUOTED(PROG_W, "$PROG_W") 
+	fi
+	if test ! -z "$PROG_WHO" ; then 
+		AC_DEFINE_UNQUOTED(PROG_WHO, "$PROG_WHO") 
+	fi
+	if test ! -z "$PROG_LAST" ; then 
+		AC_DEFINE_UNQUOTED(PROG_LAST, "$PROG_LAST") 
+	fi
+	if test ! -z "$PROG_LASTLOG" ; then 
+		AC_DEFINE_UNQUOTED(PROG_LASTLOG, "$PROG_LASTLOG") 
+	fi
+	if test ! -z "$PROG_DF" ; then 
+		AC_DEFINE_UNQUOTED(PROG_DF, "$PROG_DF") 
+	fi
+	if test ! -z "$PROG_VMSTAT" ; then 
+		AC_DEFINE_UNQUOTED(PROG_VMSTAT, "$PROG_VMSTAT") 
+	fi
+	if test ! -z "$PROG_UPTIME" ; then 
+		AC_DEFINE_UNQUOTED(PROG_UPTIME, "$PROG_UPTIME") 
+	fi
+	if test ! -z "$PROG_UPTIME" ; then
+		AC_DEFINE_UNQUOTED(PROG_UPTIME, "$PROG_UPTIME") 
+	fi
+	if test ! -z "$PROG_TAIL" ; then
+		AC_DEFINE_UNQUOTED(PROG_TAIL, "$PROG_TAIL") 
+	fi
+fi
 
 AC_ARG_WITH(catman,
 	[  --with-catman=man|cat   Install preformatted manpages[no]],
